@@ -1,5 +1,9 @@
 2019-12-10  Richard Sandiford  <richard.sandiford@arm.com>
 
+	* gcc.target/aarch64/sve/acle/general/debug_4.c: New test.
+
+2019-12-10  Richard Sandiford  <richard.sandiford@arm.com>
+
 	* gcc.target/aarch64/sve/clastb_9.c: New test.
 
 2019-12-10  Tobias Burnus  <tobias@codesourcery.com>
